# langchain-academy

./: .gitignore  pyproject.toml  test_openai.py
module-0/: basics.ipynb
module-1/: agent-memory.ipynb  agent.ipynb  chain.ipynb  deployment.ipynb  router.ipynb  simple-graph.ipynb
module-1/studio/: langgraph.json
module-2/: chatbot-external-memory.ipynb  chatbot-summarization.ipynb  multiple-schemas.ipynb  state-reducers.ipynb  state-schema.ipynb  thread_1_state.json  trim-filter-messages.ipynb
module-2/state_db/: example.db-shm  example.db-wal
module-2/studio/: chatbot.py
module-3/: breakpoints.ipynb  dynamic-breakpoints.ipynb  streaming-interruption.ipynb
